<resources>
    <string name="title_activity_todo_categories">Categories</string>
    <string name="app_name" translatable="false">TimeCrunch</string>
    <string name="title_activity_new_category">New Category</string>
    <string name="new_category_hint">Category name</string>
    <string name="color">Color</string>
    <string name="has_timeblock">Has a time-block</string>

    <!-- Bottom Menu -->
    <string name="tasks">Tasks</string>
    <string name="dayView">Planner</string>
    <string name="templates">Templates</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_add_category">Add category</string>
    <string name="menu_finish">Finish</string>
    <string name="new_task">New Task</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="title_activity_login2">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email_password_wrong">The entered email or password was wrong</string>
    <string name="error_passwords_mismatch">The entered passwords are not the same</string>
    <string name="error_email_in_use">The entered email is already in use</string>
    <string name="register_success_please_verify">Register successful, please click on the link in the email we sent you before you login</string>
    <string name="error_email_not_verified">You didn\'t verify your email yet. Please verify your email by clicking on the link in the email we sent you</string>
    <!-- Strings related to tasks -->
    <string name="placeholder_editTasks">Edit Task</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="is_task_repeating">Is a repeating task</string>
    <string name="reminder">Reminder</string>
    <string name="no_reminder_set">No reminder set</string>
    <string name="repeat_type">Repeat type</string>
    <string name="delete_reminder">Delete reminder</string>
    <string name="repetition_interval">Repetition interval</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="menu_delete_category">Delete category</string>
    <string name="menu_edit_category">Edit category</string>
    <string name="prompt_color_too_light">The color you chose is too light. It will be changed!</string>
    <string name="delete_category_question">Delete category?</string>
    <string name="delete_category_consequences">All associated tasks and Timeblocks will be deleted as well!</string>
    <string name="edit_category">Edit category</string>
    <string name="logout">Logout</string>
    <string name="categories">Categories</string>
    <string name="repeat">Repeat</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="set_reminder">Set your reminder</string>
    <string name="select_type">Select type</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="reminder_removed">Reminder was removed!</string>
    <plurals name="minute_plural">
        <item quantity="one">"Minute"</item>
        <item quantity="other">"Minutes"</item>
    </plurals>
    <plurals name="hour_plural">
        <item quantity="one">"Hour"</item>
        <item quantity="other">"Hours"</item>
    </plurals>
    <plurals name="day_plural">
        <item quantity="one">"Day"</item>
        <item quantity="other">"Days"</item>
    </plurals>
    <plurals name="week_plural">
        <item quantity="one">"Week"</item>
        <item quantity="other">"Weeks"</item>
    </plurals>
    <plurals name="month_plural">
        <item quantity="one">"Month"</item>
        <item quantity="other">"Months"</item>
    </plurals>
    <string name="every">Every</string>
    <string name="prompt_enter_number">Enter number</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="add_more_tasks">Add more tasks</string>
    <string name="BACK">BACK</string>
    <string name="SAVE_TASKS">SAVE TASKS</string>
    <string name="clear_your_tasks">Clear your tasks</string>
    <string name="DELETE_BLOCK">DELETE BLOCK</string>
    <string name="ADD_TASKS">ADD TASKS</string>
</resources>
